Enhance global CMake integration

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,10 +10,12 @@ project(ZStream
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+list(APPEND CMAKE_PREFIX_PATH "${PROJECT_SOURCE_DIR}/../../deploy/")
+
 ##
 ##  OpenMVG (use prebuild libraries)
 ##
-find_package(OpenMVG CONFIG REQUIRED PATHS ${CMAKE_INSTALL_PREFIX}/share/openMVG/cmake)
+find_package(OpenMVG CONFIG REQUIRED)
 
 set(HEADERS
   src/strict_fstream.hpp
@@ -26,14 +28,12 @@ add_library(zstr INTERFACE)
 target_include_directories(zstr INTERFACE
   $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/src>
   $<INSTALL_INTERFACE:include/zstr>
-  $<BUILD_INTERFACE:${CMAKE_INSTALL_PREFIX}/include/openMVG/third_party/zlib>
-  $<INSTALL_INTERFACE:include/openMVG/third_party/zlib>
 )
-target_link_libraries(zstr INTERFACE "zlib")
+target_link_libraries(zstr INTERFACE zlib)
 
 install(TARGETS zstr EXPORT zstrConfig)
-install(FILES ${HEADERS} DESTINATION ${CMAKE_INSTALL_PREFIX}/include/zstr)
+install(FILES ${HEADERS} DESTINATION include/zstr)
 
-export(TARGETS zstr FILE zstrConfig.cmake)
+export(TARGETS zstr FILE zstrConfig.cmake NAMESPACE ZStream::)
 
-install(EXPORT zstrConfig DESTINATION share/zstr)
+install(EXPORT zstrConfig DESTINATION share/zstr NAMESPACE ZStream::)
